# agshield

./: .gitignore  README.md  Research_Proposal.md  analyze_results.py  antigravity_shield_app.py  install.bat  remote_deployer.py  report_guide.md  report_role_1_attacker.md  report_role_3_analyst.md  shield_live_demo.py  shield_monitor.py  shield_v3.py  stealth_attack.py  test_harness_v3.py  test_shield_windows.py  victim_report_stealth.json
AntiGravity_Shield/: README.md
antigravity-shield/: README.md  SECURITY.md  pyproject.toml
antigravity-shield/.github/workflows/: ci.yml
antigravity-shield/build_scripts/: README.md  agshield_linux.spec  agshield_windows.spec  build_linux.sh  build_windows.bat  install_linux.sh  install_windows.bat
antigravity-shield/config/: default.yaml
antigravity-shield/src/agshield/: __init__.py  analysis.py  cli.py  config.py  daemon.py  human_baseline.py  test_harness.py
antigravity-shield/src/agshield/ai/: __init__.py  anomaly_engine.py
antigravity-shield/src/agshield/detection/: __init__.py  chain_correlator.py  engine.py  rules.py
antigravity-shield/src/agshield/integration/: __init__.py  wazuh.py
antigravity-shield/src/agshield/monitor/: __init__.py  behavior.py  canary.py  kernel_monitor.py  logprotector.py  process_tracker.py  realtime.py  timestamp.py
antigravity-shield/src/antigravity_shield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
antigravity-shield/systemd/: antigravity.service
antigravity-shield/tests/: __init__.py  test_analysis.py  test_config.py  test_harness_analysis.py  test_human_baseline.py  test_logprotector.py  test_timestamp.py
antigravity-shield/wazuh/decoders/: antigravity.xml
(+124 files in other folders)
