[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-shield"
version = "2.0.0"
description = "Real-time AI anti-forensic detection and mitigation framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Emmanuel Chukwudinma Orji", email = "emmanuel.orji@example.com"},
]
keywords = ["security", "forensics", "anti-forensics", "detection", "wazuh", "siem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
wazuh = [
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agshield = "agshield.cli:main"
antigravity = "agshield.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agshield = ["config/default.yaml"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
